// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|/m-error-pages/m-error-access-denied default 1`] = `
<div
  style="border: 1px solid black; padding: 10px; width: 600px;"
>
  <article
    class="m-message-page m--is-state-information m--is-skin-default"
  >
    <header
      class="m-message-page__header"
    >
      <h2
        class="m-message-page__title"
      >
        Vous n'avez pas les privilèges
        <br />
        pour voir cette page
      </h2>
       
      <div
        aria-hidden="true"
        class="m-message-page__icon-container"
      >
        <!---->
      </div>
    </header>
     
    <div
      class="m-message-page__body"
    >
      <p
        class="m-message-page__hints m--no-content"
      >
        Si vous croyez que cette situation est anormale, contactez le soutien technique.
      </p>
       
      <!---->
       
      <!---->
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|/m-error-pages/m-error-access-denied hints 1`] = `
<div
  style="border: 1px solid black; padding: 10px; width: 600px;"
>
  <article
    class="m-message-page m--is-state-information m--is-skin-default"
  >
    <header
      class="m-message-page__header"
    >
      <h2
        class="m-message-page__title"
      >
        Vous n'avez pas les privilèges
        <br />
        pour voir cette page
      </h2>
       
      <div
        aria-hidden="true"
        class="m-message-page__icon-container"
      >
        <!---->
      </div>
    </header>
     
    <div
      class="m-message-page__body"
    >
      <p
        class="m-message-page__hints m--no-content"
      >
        My only custom hint
      </p>
      <p
        class="m-message-page__hints m--no-content"
      >
        My second (long) custom hint.Lorem ipsum dolor
                sit amet, consectetur adipiscing elit. Nulla egestas urna rhoncus ipsum congue lobortis. 
      </p>
       
      <!---->
       
      <!---->
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|/m-error-pages/m-error-access-denied links 1`] = `
<div
  style="border: 1px solid black; padding: 10px; width: 600px;"
>
  <article
    class="m-message-page m--is-state-information m--is-skin-default"
  >
    <header
      class="m-message-page__header"
    >
      <h2
        class="m-message-page__title"
      >
        Vous n'avez pas les privilèges
        <br />
        pour voir cette page
      </h2>
       
      <div
        aria-hidden="true"
        class="m-message-page__icon-container"
      >
        <!---->
      </div>
    </header>
     
    <div
      class="m-message-page__body"
    >
      <p
        class="m-message-page__hints m--no-content"
      >
        Si vous croyez que cette situation est anormale, contactez le soutien technique.
      </p>
       
      <!---->
       
      <!---->
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|/m-error-pages/m-error-access-denied title 1`] = `
<div
  style="border: 1px solid black; padding: 10px; width: 600px;"
>
  <article
    class="m-message-page m--is-state-information m--is-skin-default"
  >
    <header
      class="m-message-page__header"
    >
      <h2
        class="m-message-page__title"
      >
        Vous n'avez pas les privilèges
        <br />
        pour voir cette page
      </h2>
       
      <div
        aria-hidden="true"
        class="m-message-page__icon-container"
      >
        <!---->
      </div>
    </header>
     
    <div
      class="m-message-page__body"
    >
      <p
        class="m-message-page__hints m--no-content"
      >
        Si vous croyez que cette situation est anormale, contactez le soutien technique.
      </p>
       
      <!---->
       
      <!---->
    </div>
  </article>
</div>
`;
